# SelectTranslate

./: SelectTranslator.py  evaluate.py  pyproject.toml  selects.py  simple.py  translate.py
data/en-fi/: newstest2017-enfi.en  newstest2017-enfi.fi  test.src  test.trg
outputs/: en-fi-10.jsonl  en-fi-10.txt  en-fi.txt  newstest2017-en-fi-10.jsonl  newstest2017-en-fi-10.txt  newstest2017-en-fi.txt
select_translate/: SelectTranslator.py
