[tool.poetry]
name = "SelectTranslate"
version = "0.1.0"
description = ""
authors = ["Tomasz Darmetko <isinlor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^3.0.2"
nlp = "^0.4.0"
bert-score = "^0.3.5"
sacrebleu = "^1.4.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
